--- a/index.html
+++ b/index.html
@@ -15,36 +15,59 @@
 <body>
     <div class="container">
         <div class="nav_section">
-            <img src="./img/Logo.png" alt="" >
-            <a href='#login_main_container'><button type="submit1" onclick="">Start Networking</button></a>
-        </div>
-
-        <div data-aos="fade-down" data-aos-easing="linear"
-            data-aos-duration="1500" class="heading">
-                <p class="heading_text_white">
-                    The<br />
-                    Social Network <br />
-                    That <br />
-                </p>
-                <p class="heading_text_yellow">
-                    Rewards<br />
-                    You!
-                </p>
-        </div>
-
-        <div class="signup_container">
-            <div class="signup_inner_container">
-                <p class="coin_title">
-                    Become an early member &<br /> 
-                    Get 3,000 Bonus Coins!
-                </p>
-                <form>
-                    <label for="mobileno" class="account_label">Enter Your Mobile Number to create account</label><br>
-                    <input type="text" class="mobileno" name="mobileno" placeholder="Enter 10 Digit Number:"><br>
-                    <input type="submit" value="Start Networking">
-                </form>
+            <div class="nav_section_inner">
+                <img src="./img/Logo.png" alt="" >
+                <a href='#login_main_container'><button type="submit1" onclick="">Start Networking</button></a>
             </div>
+            <div class="line"></div>
         </div>
+
+       
+
+        <div class="first_wrapper">
+            <div class="second_wrapper">
+                <div class="heading">
+                        <p class="heading_text_black">
+                            The<br />
+                            Social Network <br />
+                            That <br />
+                        </p>
+                        <p class="heading_text_green">
+                            Rewards<br />
+                            You!
+                        </p>
+                </div>
+
+                <div class="signup_container">
+                    <div class="signup_inner_container">
+                        <p class="coin_title">
+                            Become an early member &<br /> 
+                            Get 3,000 Bonus Coins!
+                        </p>
+                        <form>
+                            <label for="mobileno" class="account_label">Enter Your Mobile Number to create account</label><br>
+                            <input type="text" class="mobileno" name="mobileno" placeholder="Enter 10 Digit Number:"><br>
+                            <input type="submit" value="Start Networking">
+                        </form>
+                    </div>
+                </div>
+            </div>
+            <!-- <img src="./img/post.png" alt="" > -->
+        </div>
+
+        <!-- <div class="third_wrapper">
+            <div class="summary_heading">
+                <P>Earn coins on your Social Activity, build your </P>
+                <P>Networth & redeem them for In-App Promotions, </P>
+                <p>Shopping, Services, Exclusive memberships & <br/>
+                   Money! </p>  
+            </div>
+            <div class="summary_heading">
+                <P>only  </P>
+                <P>25,000 </P>
+                <p>Early Bird Sign-ups </p>
+            </div>
+        </div> -->
     </div>
 </body>
 </html>
