--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="nav_section">
             <div class="nav_section_inner">
-                <img src="./img/Logo.png" alt="" >
+                <img src="./img/Logo.svg" alt="" >
                 <a href='#login_main_container'><button type="submit1" onclick="">Start Networking</button></a>
             </div>
             <div class="line"></div>
@@ -52,22 +52,24 @@
                     </div>
                 </div>
             </div>
-            <!-- <img src="./img/post.png" alt="" > -->
+           
+                <img src="./img/post.svg" alt="post_card" >
+            </div>
         </div>
 
-        <!-- <div class="third_wrapper">
+        <div class="third_wrapper">
             <div class="summary_heading">
-                <P>Earn coins on your Social Activity, build your </P>
-                <P>Networth & redeem them for In-App Promotions, </P>
-                <p>Shopping, Services, Exclusive memberships & <br/>
+                <P>Earn coins on your <b>Social Activity,</b> build your </P>
+                <P><b>Networth</b> & redeem them for <span class="green_text">In-App Promotions,</span> </P>
+                <p class="green_text">Shopping, Services, Exclusive memberships & <br/>
                    Money! </p>  
             </div>
-            <div class="summary_heading">
-                <P>only  </P>
-                <P>25,000 </P>
-                <p>Early Bird Sign-ups </p>
+            <div class="early_heading">
+                <P class="early_heading_first">only  </P>
+                <P class="early_heading_second">25,000 </P>
+                <p class="early_heading_third">Early Bird Sign-ups </p>
             </div>
-        </div> -->
+        </div>
     </div>
 </body>
 </html>
