--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
                     </div>
                 </div>
             </div>
-           
-                <img src="./img/post.svg" alt="post_card" >
+                <div class="svg_container">
+                    <img src="./img/post.svg" alt="post_card" >
+                </div>
             </div>
         </div>
 
