--- a/index.html
+++ b/index.html
@@ -14,21 +14,20 @@
     </head>
 <body>
     <div class="container">
+
         <div class="nav_section">
             <div class="nav_section_inner">
                 <img src="./img/Logo.svg" alt="" >
-                <a href='#login_main_container'><button type="submit1" onclick="">Start Networking</button></a>
+                <a href='#signup_container'><button type="submit1" onclick="">Start Networking</button></a>
             </div>
             <div class="line"></div>
         </div>
-
-       
 
         <div class="first_wrapper">
             <div class="second_wrapper">
                 <div class="heading">
                         <p class="heading_text_black">
-                            The<br />
+                            The <br />
                             Social Network <br />
                             That <br />
                         </p>
@@ -38,7 +37,7 @@
                         </p>
                 </div>
 
-                <div class="signup_container">
+                <div class="signup_container" id="signup_container">
                     <div class="signup_inner_container">
                         <p class="coin_title">
                             Become an early member &<br /> 
@@ -58,19 +57,22 @@
             </div>
         </div>
 
-        
+
         <div class="third_wrapper">
+
             <div class="summary_heading">
                 <P>Earn coins on your <b>Social Activity,</b> build your </P>
                 <P><b>Networth</b> & redeem them for <span class="green_text">In-App Promotions,</span> </P>
                 <p class="green_text">Shopping, Services, Exclusive memberships & <br/>
                    Money! </p>  
             </div>
+
             <div class="early_heading">
                 <P class="early_heading_first">only  </P>
                 <P class="early_heading_second">25,000 </P>
                 <p class="early_heading_third">Early Bird Sign-ups </p>
             </div>
+
         </div>
     </div>
 </body>
