--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
                 </div>
             </div>
                 <div class="svg_container">
-                    <img src="./img/post.svg" alt="post_card" >
+                    <!-- <img src="./img/post.svg" alt="post_card" > -->
+                    <img src="./img/post_card.svg" alt="post_card" >
                 </div>
             </div>
         </div>
