--- a/index.html
+++ b/index.html
@@ -62,19 +62,39 @@
         </div>
 
 
-        <div class="third_wrapper">
+        <div class="reward_wrapper">
             <div class="summary_heading">
                 <P>Earn coins on your <b>Social Activity,</b> build your </P>
-                <P><b>Networth</b> & redeem them for <span class="green_text">In-App Promotions,</span> </P>
-                <p class="green_text">Shopping, Services, Exclusive memberships & <br/>
-                   Money! </p>  
+                <P><b>Networth</b> & redeem them for</p>  
             </div>
-
-            <div class="early_heading">
-                <P class="early_heading_first">only  </P>
-                <P class="early_heading_second">25,000 </P>
-                <p class="early_heading_third">Early Bird Sign-ups </p>
+            <div class="reward_inner_wrapper">
+                <div class="shopping">
+                    <img src="./img/shopping.png" alt="">
+                    <p class="reward_heading">Shopping</p>
+                </div>
+                <div class="VIP"> 
+                    <img src="./img/VIP.png" alt="">
+                    <p class="reward_heading">Exclusive</p>
+                    <p class="reward_heading">membership</p>
+                </div>
             </div>
+            <div class="reward_inner_wrapper">
+                <div class="brand">
+                    <img src="./img/Grow_Brand.png" alt="">
+                    <p class="reward_heading">Growing </p>
+                    <p class="reward_heading">Your Brand</p>
+                </div>
+                <div class="money">
+                    <img src="./img/Money.png" alt="">
+                    <p class="reward_heading">Money</p>
+                </div>
+            </div>
+        </div>
+        <div class="early_heading">
+            <P class="early_heading_first">only  </P>
+            <P class="early_heading_second">25,000 </P>
+            <p class="early_heading_third">Early Bird Sign-ups </p>
+            <a href='#signup_container'><button type="submit2" onclick="">Book your Spot</button></a>
         </div>
     </div>
 </body>
