--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
 
         <div class="reward_wrapper">
             <div class="summary_heading">
-                <P>Earn coins on your <b>Social Activity,</b> build your </P>
-                <P><b>Networth</b> & redeem them for</p>  
+                <span>Earn coins on your <b>Social Activity</b>,<br />
+                    build your<b> Networth</b> & redeem them <br />
+                    for</span>  
             </div>
             <div class="reward_inner_wrapper">
                 <div class="shopping">
@@ -73,28 +74,82 @@
                     <p class="reward_heading">Shopping</p>
                 </div>
                 <div class="VIP"> 
-                    <img src="./img/VIP.png" alt="">
+                    <img src="./img/VIP.png" class="vip_img" alt="">
                     <p class="reward_heading">Exclusive</p>
                     <p class="reward_heading">membership</p>
                 </div>
             </div>
             <div class="reward_inner_wrapper">
                 <div class="brand">
-                    <img src="./img/Grow_Brand.png" alt="">
+                    <img src="./img/Grow_Brand.png" class="brand_img" alt="">
                     <p class="reward_heading">Growing </p>
                     <p class="reward_heading">Your Brand</p>
                 </div>
                 <div class="money">
                     <img src="./img/Money.png" alt="">
-                    <p class="reward_heading">Money</p>
+                    <p class="reward_heading">Money!</p>
                 </div>
             </div>
         </div>
+
         <div class="early_heading">
-            <P class="early_heading_first">only  </P>
+            <P class="early_heading_first">Only  </P>
             <P class="early_heading_second">25,000 </P>
             <p class="early_heading_third">Early Bird Sign-ups </p>
             <a href='#signup_container'><button type="submit2" onclick="">Book your Spot</button></a>
+        </div>
+
+        <div class="middle_container">
+            <img src="./img/app_all_screen.png" class="screen" alt="">
+            <div class="four_container">
+                <div class="first_row">
+                    <div class="first_container">
+                        <p class="container_heading">Grow your Network</p>
+                        <span class="container_subheading">Expand your network by connecting with experts & entrepreneurs from multiple<br /> industries.&emsp;<br /><br />
+                              On Tsow, you don’t need contacts to grow!</span>
+                        <img src="./img/network.png" class="network" alt="">
+                        <span class="follow"><img src="./img/user_plus.png" alt=""> Follow</span>
+                    </div>
+
+                    <div class="second_container">
+                        <p class="container_heading">Share & Earn</p>
+                        <span class="container_subheading">Earn coins on sharing good information through posts from your 
+                            followers.<br /><br /> 
+                            Tsow rewards you for your time spent on all social activity!</span>
+                        <div class="second_inner_container">
+                            <span class="container_subheading">Your TSOW Networth</span>
+                            <div class="coin_container">
+                                <div class="">
+                                    <img src="" alt="">
+                                    <span class="no_of_coins">1.4M</span>
+                                </div>
+                                <span class="coins">coins</span>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+                <div class="second_row">
+                    <div class="third_container">
+                        <p class="container_heading">Discover Opportunites</p>
+                        <span class="container_subheading">Discover business & professional opportunities & latest trends through a brand new experience.</span>
+                        <div class="">
+                            <p></p>
+                        </div>
+                    </div>
+
+                    <div class="fourth_container">
+                        <p class="container_heading">Increase Brand Value</p>
+                        <span class="container_subheading">Get access to Digital Spaces to feature yourself & your company at the prime spots of the App.<br /><br />
+                        Be an influencer of your domain!</span>
+                        <div class="increase">
+                            <img src="./img/increase.png" class='' alt="">
+                        </div>
+                    </div>
+                </div>
+
+            </div>
         </div>
     </div>
 </body>
