--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         <div class="second_inner_container">
                             <span class="container_subheading">Your TSOW Networth</span>
                             <div class="coin_container">
-                                <div class="">
+                                <div class="people">
                                     <img src="" alt="">
                                     <span class="no_of_coins">1.4M</span>
                                 </div>
@@ -150,6 +150,54 @@
                 </div>
 
             </div>
+        </div>
+
+        <div class="people_container">
+            <span class="people_bold">
+                Who’s On Tsow!
+            </span>
+            <span class="people_inner_container">
+                <div class="people">
+                    <img src="./img/Entreprenuers.png" alt="">
+                    <p class="people_heading">Entreprenuers</p>
+                </div>
+                <div class="people">
+                    <img src="./img/Start-ups.png" alt="">
+                    <p class="people_heading">Start-ups</p>
+                </div>
+                <div class="people">
+                    <img src="./img/Experts.png" alt="">
+                    <p class="people_heading">Experts</p>
+                </div>
+                <div class="people">
+                    <img src="./img/Students.png" alt="">
+                    <p class="people_heading">Students</p>
+                </div>
+            </span>
+            
+            <span class="people_inner_container">
+                <div class="people">
+                    <img src="./img/Professionals.png" alt="">
+                    <p class="people_heading">Professionals</p>
+                </div>
+                <div class="people">
+                    <img src="./img/Freelancers.png" alt="">
+                    <p class="people_heading">Freelancers</p>
+                </div>
+                <div class="people">
+                    <img src="./img/Businessmen.png" alt="">
+                    <p class="people_heading">Businessmen</p>
+                </div>
+            </span>
+        </div>
+        <div class="user_container">
+            <div class="user_inner_container">
+                <span class="heading_yellow_count">5,000+</span>
+                <span class="user_text">
+                    Users from Finance, Start-ups, Advertising, Freelancers, Tech etc. have joined the Tsow Network!
+                </span>
+            </div>
+            <a href='#signup_container'><button type="submit1" onclick="">Start Networking</button></a>
         </div>
     </div>
 </body>
