--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
                         <form>
                             <label for="mobileno" class="account_label">Enter Your Mobile Number to create account</label><br>
                             <input type="text" class="mobileno" name="mobileno" placeholder="Enter 10 Digit Number:"><br>
-                            <input id="mobileButton" type="submit" value="Start Networking">
+                            <!-- <input id="mobileButton" type="submit" value="Start Networking"> -->
+                            <button id="mobileButton" type="submit" onclick="">Start Networking</button>
                         </form>
                        
                     </div>
