--- a/index.html
+++ b/index.html
@@ -200,34 +200,49 @@
             </div>
         </div> -->
         <!-- width="1439" height="868"  -->
-        <!-- <div class="" style="width: fit-content; height: fit-content;"> -->
-            <!-- <div class="wave_container">
-                <div class="wave1">
-                    <svg viewBox="0 0 1439 868" fill="none" xmlns="http://www.w3.org/2000/svg">
-                        <path d="M0 0C692.345 165.388 1192.44 334.175 1440 0V868C754.084 766.436 171.804 607.776 0 868V0Z" fill="#3E3FC9"/>
-                    </svg>
-                </div>
-
+        
+            <div class="wave_container">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff"  d="M0,128L80,149.3C160,171,320,213,480,245.3C640,277,800,299,960,282.7C1120,267,1280,213,1360,186.7L1440,160L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z"></path></svg>
                 <div class="bubble_Container">
+                    
                     <div class="bubble_Container1">
                         <div class="bubble1_container">
                             <img src="./img/bubble1.svg" class="bubble1" alt="">
+                            <p class="container_heading">Grow your Network</p>
+                            <span class="container_subheading">Expand your network by connecting with experts & entrepreneurs from multiple<br /> industries.&emsp;<br /><br />
+                              On Tsow, you don’t need contacts to grow!</span>
+                            <img src="./img/Grow_network.svg" class="Grow_network" alt="">
                         </div>
                         <div class="bubble2_container">
                             <img src="./img/bubble2.svg" class="bubble2" alt="">
+                            <p class="container_heading">Share & Earn</p>
+                            <span class="container_subheading">Earn coins on sharing good information through posts from your followers.<br /><br />
+                                Tsow rewards you for your time spent on all social activity!</span>
+                            <img src="./img/networth.svg" class="networth" alt="">
                         </div>
                     </div>
+
                     <div class="bubble_Container2">
                         <div class="bubble3_container">
                             <img src="./img/bubble3.svg" class="bubble3" alt="">
+                            <p class="container_heading">Discover Opportunites</p>
+                            <span class="container_subheading">Discover business & professional opportunities & latest trends through a brand new experience.</span>
+                            <img src="./img/" alt="">
                         </div>
                         <div class="bubble4_container">
                             <img src="./img/bubble4.svg" class="bubble4" alt="">
+                            <p class="container_heading"> Increase Brand Value</p>
+                            <span class="container_subheading">Get access to Digital Spaces to feature yourself & your company at the prime spots of the App.<br /><br />
+                                Be an influencer of your domain!</span>
+                            <img src="./img/growth.png" class="growth" alt="">
                         </div>
                     </div>
                 </div>
-            </div> -->
-        <!-- </div> -->
+
+                <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,224L120,197.3C240,171,480,117,720,112C960,107,1200,149,1320,170.7L1440,192L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z"></path></svg> -->
+                <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,160L80,133.3C160,107,320,53,480,42.7C640,32,800,64,960,96C1120,128,1280,160,1360,176L1440,192L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg> -->
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff"  d="M0,256L80,213.3C160,171,320,85,480,69.3C640,53,800,107,960,149.3C1120,192,1280,224,1360,240L1440,256L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg><br />
+            </div>
 
         <div class="people_container">
             <span class="people_bold">
