--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no ">
         <title>Earn From Your Network</title>
         <link rel = "icon" href ="./img/web_applogo.svg" type = "image/svg+xml">
-        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -41,19 +40,17 @@
                     <div class="signup_inner_container">
                         <p class="coin_title">
                             Become an early member &<br /> 
-                            Get 3,000 Bonus Coins!
+                            Get 5,000 Bonus Coins!
                         </p>
                         <form>
-                            <label for="mobileno" class="account_label">Enter Your Mobile Number to create account</label><br>
-                            <input type="text" class="mobileno" name="mobileno" placeholder="Enter 10 Digit Number:"><br>
-                            <a href='#otp'><button id="mobileButton" type="submit" >Start Networking</button></a>
+                            <label  class="account_label">Enter Your Mobile Number to create account</label><br>
+                            <input id='mobileno'height="500px" type="text" class="mobileno"  placeholder="Enter 10 Digit Mobile Number:"><br>
                         </form>
-                       
+                        <a href='otp.html'><button id="mobileButton" type="submit" >Start Networking</button></a>
                     </div>
                 </div>
 
-                <div id="otp" class="otp">
-                    <!-- Modal content -->
+                <!-- <div id="otp" class="otp">
                     <div class="otp-content">
                       <span class="close">&times;</span>
                       <p class="otp_text">please type the OTP sent to<br /> 
@@ -82,24 +79,7 @@
                           </form>
                     </div> 
 
-                </div>
-
-                <!-- <div id="signup" class="signup"> -->
-                    <!-- Modal content -->
-                    <!-- <div class="signup-content">
-                      <span class="close">&times;</span>
-                      <p class="signup_Heading">Hi,</p>
-                        <form>
-                            <input type="text" class="first_name_input" name="first" placeholder="Enter first name"><br>
-                            <input type="text" class="last_name_input" name="last" placeholder="enter last name"><br>
-
-                            <label for="mobileno" class="username_label">Username should be AlphaNumeric: Eg: Rahul123</label><br>
-                            <input type="text" class="otp_input" name="otp" placeholder="Set Username"><br>
-
-                            <button id="mobileButton" type="submit" >Let’s Go!</button>
-                        </form>
-                    </div>  -->
-                <!-- </div> -->
+                </div> -->
 
             </div>
                 <div class="svg_container">
@@ -227,7 +207,7 @@
                             <img src="./img/bubble3.svg" class="bubble3" alt="">
                             <p class="container_heading">Discover Opportunites</p>
                             <span class="container_subheading">Discover business & professional opportunities & latest trends through a brand new experience.</span>
-                            <img src="./img/" alt="">
+                            <img src="./img/ask_corner.svg" class="ask_corner" alt="">
                         </div>
                         <div class="bubble4_container">
                             <img src="./img/bubble4.svg" class="bubble4" alt="">
