--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         </p>
                         <form>
                             <label  class="account_label">Enter Your Mobile Number to create account</label><br>
-                            <input id='mobileno'height="500px" type="text" class="mobileno"  placeholder="Enter 10 Digit Mobile Number:"><br>
+                            <input id='mobileno' type="text" class="mobileno"  placeholder="Enter 10 Digit Mobile Number:"><br>
                         </form>
                         <a href='otp.html'><button id="mobileButton" type="submit" >Start Networking</button></a>
                     </div>
@@ -83,7 +83,6 @@
 
             </div>
                 <div class="svg_container">
-                    <!-- <img src="./img/post.svg" alt="post_card" > -->
                     <img src="./img/post_card.svg" alt="post_card" >
                 </div>
             </div>
@@ -273,8 +272,53 @@
             <a href='#signup_container'><button type="submit1" onclick="">Start Networking</button></a>
         </div>
 
-        <div class="wave2">
+        <div class="wave_container2">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff"  d="M0,128L80,149.3C160,171,320,213,480,245.3C640,277,800,299,960,282.7C1120,267,1280,213,1360,186.7L1440,160L1440,0L1360,0C1280,0,1120,0,960,0C800,0,640,0,480,0C320,0,160,0,80,0L0,0Z"></path></svg>
+            <div class="screen_step_early_container">
+                <div class="top_wave_container">
+                    <div class="working_steps_container">
+                        <span class="working_heading">How it works?</span>
+                        <div class="working_steps">
+                            <div class="working_steps_no">1</div>
+                            <span class="working_step">Sign-up & join the Network</span>
+                        </div>
+                        <div class="working_steps">
+                            <div class="working_steps_no">2</div>
+                            <span class="working_step">Build Connections by following users</span>
+                        </div>
+                        <div class="working_steps">
+                            <div class="working_steps_no">3</div>
+                            <span class="working_step">Share your ideas & queries as posts & earn coins on them</span>
+                        </div>
+                        <div class="working_steps">
+                            <div class="working_steps_no">4</div>
+                            <span class="working_step">Grow your networth, create work profile & list your products & services</span>
+                        </div>
+                        <div class="working_steps">
+                            <div class="working_steps_no">5</div>
+                            <span class="working_step">Explore opportunities through industry pages</span>
+                        </div>
+                    </div>
+                    <img src="./img/mobile_screens.svg" class="mobile_screens" alt="">
+                </div>
 
+                <div class="early_birds_container">
+                    <span class="heading_early">Don’t miss your slot to the brand new Social Network!</span>
+                    <span class="slots">Only 25,000 Early Bird Slots!</span>
+                    <a href='#signup_container'><button type="submit1" onclick="">Join in!</button></a>
+                </div>
+            </div>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff"  d="M0,256L80,213.3C160,171,320,85,480,69.3C640,53,800,107,960,149.3C1120,192,1280,224,1360,240L1440,256L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg><br />
+        </div>
+
+        <div class="footer">
+            <span>Coming Soon</span>
+            <div class="store">
+                <img src="./img/" alt="">
+                <img src="./img/" alt="">
+            </div>
+            <span>All Rights Reserved By Arkkaya Fintrade Pvt. Ltd.<br >
+                2021</span>
         </div>
     </div>
     <script src="./js/script.js">
