--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                         <div class="bubble1_container">
                             <img src="./img/bubble1.svg" class="bubble1" alt="">
                             <p class="container_heading">Grow your Network</p>
-                            <span class="container_subheading">Expand your network by connecting with experts & entrepreneurs from multiple<br /> industries.&emsp;<br /><br />
+                            <span class="container_subheading">Expand your network by connecting with experts & entrepreneurs from multiple industries.&emsp;<br /><br />
                               On Tsow, you don’t need contacts to grow!</span>
                             <img src="./img/Grow_network.svg" class="Grow_network" alt="">
                         </div>
@@ -280,23 +280,23 @@
                         <span class="working_heading">How it works?</span>
                         <div class="working_steps">
                             <div class="working_steps_no">1</div>
-                            <span class="working_step">Sign-up & join the Network</span>
+                            <div class="working_step">Sign-up & join the Network</div>
                         </div>
                         <div class="working_steps">
                             <div class="working_steps_no">2</div>
-                            <span class="working_step">Build Connections by following users</span>
+                            <div class="working_step">Build Connections by following users</div>
                         </div>
                         <div class="working_steps">
                             <div class="working_steps_no">3</div>
-                            <span class="working_step">Share your ideas & queries as posts & earn coins on them</span>
+                            <div class="working_step">Share your ideas & queries as posts & earn coins on them</div>
                         </div>
                         <div class="working_steps">
                             <div class="working_steps_no">4</div>
-                            <span class="working_step">Grow your networth, create work profile & list your products & services</span>
+                            <div class="working_step">Grow your networth, create work profile & list your products & services</div>
                         </div>
                         <div class="working_steps">
                             <div class="working_steps_no">5</div>
-                            <span class="working_step">Explore opportunities through industry pages</span>
+                            <div class="working_step">Explore opportunities through industry pages</div>
                         </div>
                     </div>
                     <img src="./img/mobile_screens.svg" class="mobile_screens" alt="">
