--- a/index.html
+++ b/index.html
@@ -312,12 +312,12 @@
         </div>
 
         <div class="footer">
-            <span>Coming Soon</span>
+            <span class="footer_heading">Coming Soon</span>
             <div class="store">
-                <img src="./img/" alt="">
-                <img src="./img/" alt="">
+                <img src="./img/google_play.png" class="google_play" alt="">
+                <img src="./img/apple_store.png" alt="">
             </div>
-            <span>All Rights Reserved By Arkkaya Fintrade Pvt. Ltd.<br >
+            <span class="copy_right">All Rights Reserved By Arkkaya Fintrade Pvt. Ltd.<br >
                 2021</span>
         </div>
     </div>
