--- a/signup.html
+++ b/signup.html
@@ -21,18 +21,18 @@
               <input type="text" class="last_name_input" name="last" placeholder="enter last name">
               <span class="error_message">numbers (123) & special characters (*$%&) are not allowed</span><br /><br />
               
-              <!-- <form autocomplete="off" >
+              <form autocomplete="off" >
                 <div class="autocomplete" style="width:300px;">
                   <label for="myCountry" class="username_label">Pick your profession or expertise below</label><br>
                   <input id="myInput" type="text" name="myCountry" placeholder="Profession / Expertise in:">
                 </div>
-              </form><br > -->
-              <form autocomplete="off" action="/action_page.php">
+              </form><br >
+              <!-- <form autocomplete="off" action="/action_page.php">
                 <div class="autocomplete" style="width:300px;">
                   <input id="myInput" type="text" name="myCountry" placeholder="Country">
                 </div>
                 <input type="submit">
-              </form>
+              </form> -->
 
               <label for="mobileno" class="username_label">Username should be AlphaNumeric: Eg: Rahul123</label>
               <input type="text" class="user_name_input" name="otp" placeholder="Set Username"><br>
