--- a/Member.html
+++ b/Member.html
@@ -13,16 +13,10 @@
 </head>
 <body>
     <div class="otp-content">
-        <img src="./img/Enter_otp.svg" alt=""><br /><br />
-        <p class="otp_text">please type the OTP sent to<br /> 
-          +91 9876543210.</p><br />
-          <form>
-              <input type="text" class="otp_input" name="otp" placeholder="Enter 6 Digits OTP No."><br>
-              <span class="error_message">Please enter right OTP</span><br /><br />
-          </form>
-          <span class="seconds">0:10</span><br />
-          <span class="resend_otp"><img src="./img/message.png" alt="">&ensp; Resend OTP</span>
-          <a href='signup.html'><button id="mobileButton" type="submit" >Verify</button></a>
+        <img src="./img/congs.svg" alt=""><br />
+        <p class="member_text">You are now a member on the 
+            Tsow-Network.</p><br /><br />
+          <a href='index.html'><button id="mobileButton" type="submit" >Go To Home Page</button></a>
       </div> 
     
 </body>
