--- a/signup.html
+++ b/signup.html
@@ -12,11 +12,11 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <div class="signup-content">
+    <div class="otp-content">
         <!-- <span class="close">&times;</span> -->
         <p class="signup_Heading">Hi,</p>
           <form>
-              <input type="text" class="first_name_input" name="first" placeholder="Enter first name">
+              <input type="text" class="first_name_input" name="first" placeholder="Enter first name"><br />
               <span class="error_message">numbers (123) & special characters (*$%&) are not allowed</span><br /><br />
               <input type="text" class="last_name_input" name="last" placeholder="enter last name">
               <span class="error_message">numbers (123) & special characters (*$%&) are not allowed</span><br /><br />
@@ -37,7 +37,7 @@
               <label for="mobileno" class="username_label">Username should be AlphaNumeric: Eg: Rahul123</label>
               <input type="text" class="user_name_input" name="otp" placeholder="Set Username"><br>
 
-              <button id="mobileButton" type="submit" >Let’s Go!</button></a>
+              <a href='Member.html'><button id="mobileButton" type="submit" >Let’s Go!</button></a>
           </form>
     </div>
 
