--- a/index.html
+++ b/index.html
@@ -240,10 +240,9 @@
                         </div>
                     </div>
                 </div>
-
-                <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,224L120,197.3C240,171,480,117,720,112C960,107,1200,149,1320,170.7L1440,192L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z"></path></svg> -->
-                <!-- <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,160L80,133.3C160,107,320,53,480,42.7C640,32,800,64,960,96C1120,128,1280,160,1360,176L1440,192L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg> -->
-                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff"  d="M0,256L80,213.3C160,171,320,85,480,69.3C640,53,800,107,960,149.3C1120,192,1280,224,1360,240L1440,256L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg><br />
+                <div style="margin-bottom: -7px;">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff"  d="M0,256L80,213.3C160,171,320,85,480,69.3C640,53,800,107,960,149.3C1120,192,1280,224,1360,240L1440,256L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z" ></path></svg><br />
+                </div>
             </div>
 
         <div class="people_container">
@@ -337,8 +336,11 @@
                     <img src="./img/star_5000_bonus.png" class="star_bonus" alt="">
                 </div>
             </div>
-            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff"  d="M0,256L80,213.3C160,171,320,85,480,69.3C640,53,800,107,960,149.3C1120,192,1280,224,1360,240L1440,256L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg><br />
+            <div style="margin-bottom: -8px;">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff"  d="M0,256L80,213.3C160,171,320,85,480,69.3C640,53,800,107,960,149.3C1120,192,1280,224,1360,240L1440,256L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg><br />
+            </div>
         </div>
+
 
         <div class="footer">
             <span class="footer_heading">Coming Soon</span>
